# nyamuk-mqtt

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.json  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
docs/: API_REFERENCE.md  CHANGELOG.md  CLI_REFERENCE.md  CONFIGURATION.md  CONTRIBUTING.md  INSTALLATION.md  TROUBLESHOOTING.md
examples/esp32_advanced/: esp32_advanced.ino  platformio.ini
examples/esp32_basic/: esp32_basic.ino  platformio.ini
examples/esp32_bmp280/: esp32_bmp280.ino  platformio.ini
examples/esp32_dht22/: esp32_dht22.ino  platformio.ini
nyamuk/: __init__.py  __main__.py  cli.py
nyamuk/core/: __init__.py  acl_manager.py  broker_manager.py  config_generator.py  docker_manager.py  log_parser.py  mosquitto.py  mqtt_client.py  mqtt_monitor.py  platform.py  port_scanner.py  provisioning.py  user_manager.py  validator.py
nyamuk/tui/: __init__.py
nyamuk/tui/pages/: __init__.py  acl.py  config.py  create.py  dashboard.py  home.py  logs.py  settings.py  tester.py  users.py
nyamuk/tui/widgets/: __init__.py  config_editor.py  log_viewer.py  status_card.py
nyamuk/web/: __init__.py
nyamuk/web/static/css/: style.css
nyamuk/web/static/js/: dashboard.js
nyamuk/web/templates/: base.html  config.html  dashboard.html  login.html  tester.html  users.html
tests/test_core/: test_acl_manager.py  test_log_parser.py  test_mosquitto.py  test_platform.py  test_user_manager.py  test_validator.py
